# VC-TP

./: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  vc.h  vc_analysis_functions.cpp  vc_binary_functions.cpp  vc_blob.cpp  vc_coin.cpp  vc_coin_detection.cpp  vc_coin_functions.cpp  vc_coin_utils.cpp  vc_conversion_functions.cpp  vc_core.cpp  vc_core_functions.cpp  vc_filter_functions.cpp  vc_frame_processor.cpp  vc_utils.cpp
src/: main.cpp
